// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ------------------------------------------------------------------------------------------
// CLINICAL DATA MODELS
// ------------------------------------------------------------------------------------------

// Static details about the patient.
model Clinicos {
  id String @id @default(cuid())

  // One-to-one relations: FK lives on the child side (Contacto, Otros, Ocupacion).
  // Prisma resolves these via the child's clinicosId field.
  contacto  Contacto?
  otros     Otros?
  ocupacion Ocupacion?

  // One-to-many: a patient can have multiple visits.
  visitations Visitation[]

  location String?

  curp           String   @unique
  dob            DateTime
  sexonacer      String
  indigenous     Boolean
  afrodescendant Boolean
  dateAdded      DateTime @default(now())
}

// Each clinical visit linked to a patient.
model Visitation {
  id String @id @default(cuid())

  // CURP is stored for quick lookup without joining Clinicos.
  curp String
  date DateTime @default(now())

  clinicos   Clinicos @relation(fields: [clinicosId], references: [id])
  clinicosId String

  // Patient details that may change visit to visit.
  genero             String
  peso               Float
  talla              Float
  existingConditions String[]
  hospitalized       Boolean
  takenMedication    Boolean
  disability         Boolean
  migrant            Boolean
  countriesMigration String[]
  alergies           String[]

  primaryConditions   String[]
  secondaryConditions String[]

  evacuationCount Int @default(0)
  vomitCount      Int @default(0)

  location  String
  diagnosis String?
  notes     String?
}

// Optional contact information for a patient.
model Contacto {
  id String @id @default(cuid())

  clinicos   Clinicos @relation(fields: [clinicosId], references: [id])
  clinicosId String   @unique

  date DateTime @default(now())

  homeEmail         String?
  homeCel           String?
  homeDireccion     String?
  homeExtNum        String?
  homeIntNum        String?
  homeCity          String?
  homeState         String?
  homePostalCode    String?
  homeCountry       String?
  lugarOrigenEstado String?
  lugarOrigenCiudad String?
}

// Optional additional patient data.
model Otros {
  id String @id @default(cuid())

  clinicos   Clinicos @relation(fields: [clinicosId], references: [id])
  clinicosId String   @unique

  date DateTime @default(now())

  nombreOtros     String?
  apellidoPaterno String?
  apellidoMaterno String?
  estadoCivil     String?
  nivelEstudios   String?
}

// Optional employment and workplace data.
model Ocupacion {
  id String @id @default(cuid())

  clinicos   Clinicos @relation(fields: [clinicosId], references: [id])
  clinicosId String   @unique

  date DateTime @default(now())

  ocupacion        String?
  paisTrabajo      String?
  direccionTrabajo String?
  ciudadTrabajo    String?
  estadoTrabajo    String?
}

// ------------------------------------------------------------------------------------------
// USER / PROFILE MODEL
// ------------------------------------------------------------------------------------------

model Profile {
  id String @id @default(cuid())

  nombre            String
  apellidoPaterno   String
  apellidoMaterno   String?
  cedulaProfesional String   @unique
  institution       String
  correoElectronico String   @unique
  password          String
  dateAdded         DateTime @default(now())
  locations         String[]
}

// ------------------------------------------------------------------------------------------
// REFERENCE / CATALOG MODELS
// ------------------------------------------------------------------------------------------

model Bacteria {
  id                 String @id @default(cuid())
  bacteria           String @unique
  nombreNormalizado   String @unique
  descripcion        String @default("")
  table              Int
  susceptibilidades  AntimicrobianoSusceptibilidad[]
}

model Resistance {
  id                  String @id @default(cuid())
  resistanceMechanism String @unique
}

model Gene {
  id       String @id @default(cuid())
  geneName String @unique
}

model Antibiotic {
  id             String @id @default(cuid())
  antibioticName String @unique
}

model Hospital {
  id           String @id @default(cuid())
  clues        String @unique
  hospitalName String
  entidad      String
  municipio    String
  tipo         String
  subtipo      String
  codigo       String
  status       String
  clave        String
  nivel        String
  latitude     Float?
  longitude    Float?
}

model State {
  id        String @id @default(cuid())
  stateName String @unique
}

// ------------------------------------------------------------------------------------------
// ANTIMICROBIANO NORMALIZED TABLES
// Replaces the 4 wide AntimicrobianoTabla3/4/5/6 models with a relational design:
// 3 catalogs (Susceptibilidad, Antimicrobiano, Bacteria) + 1 junction table.
// ------------------------------------------------------------------------------------------

model Susceptibilidad {
  id                String @id @default(cuid())
  nombre            String @unique
  color             String
  susceptibilidades AntimicrobianoSusceptibilidad[]
}

model Antimicrobiano {
  id                String @id @default(cuid())
  nombre            String @unique
  tables            Int[]
  descripcion       String @default("")
  susceptibilidades AntimicrobianoSusceptibilidad[]
}

model AntimicrobianoSusceptibilidad {
  id                String          @id @default(cuid())
  bacteriaId        String
  bacteria          Bacteria        @relation(fields: [bacteriaId], references: [id])
  antimicrobianoId  String
  antimicrobiano    Antimicrobiano  @relation(fields: [antimicrobianoId], references: [id])
  susceptibilidadId String
  susceptibilidad   Susceptibilidad @relation(fields: [susceptibilidadId], references: [id])

  @@unique([antimicrobianoId, bacteriaId])
}

// ------------------------------------------------------------------------------------------
// INDRE RESISTOME MODEL
// ------------------------------------------------------------------------------------------

// InDRE bacteriological record. dynamicData holds the antibiotic susceptibility
// values selected by the user in the InDRE form (variable structure per record).
model Indreobj {
  id String @id @default(cuid())

  bacteria            String
  resistanceMechanism String[]
  antibiotic          String[]
  gene                String[]
  geneVariant         String
  hospitalName        String
  hospitalClues       String
  hospitalId          String
  dynamicData         Json

  dateAdded DateTime @default(now())
}

// ------------------------------------------------------------------------------------------
// GEO DATA
// ------------------------------------------------------------------------------------------

model StateGeoJson {
  id        String   @id @default(cuid())
  stateName String   @unique
  geoJson   Json
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
