//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Clinicos {
  id String [pk]
  contacto Contacto
  otros Otros
  ocupacion Ocupacion
  visitations Visitation [not null]
  location String
  curp String [unique, not null]
  dob DateTime [not null]
  sexonacer String [not null]
  indigenous Boolean [not null]
  afrodescendant Boolean [not null]
  dateAdded DateTime [default: `now()`, not null]
}

Table Visitation {
  id String [pk]
  curp String [not null]
  date DateTime [default: `now()`, not null]
  clinicos Clinicos [not null]
  clinicosId String [not null]
  genero String [not null]
  peso Float [not null]
  talla Float [not null]
  existingConditions String[] [not null]
  hospitalized Boolean [not null]
  takenMedication Boolean [not null]
  disability Boolean [not null]
  migrant Boolean [not null]
  countriesMigration String[] [not null]
  alergies String[] [not null]
  primaryConditions String[] [not null]
  secondaryConditions String[] [not null]
  evacuationCount Int [not null, default: 0]
  vomitCount Int [not null, default: 0]
  location String [not null]
  diagnosis String
  notes String
}

Table Contacto {
  id String [pk]
  clinicos Clinicos [not null]
  clinicosId String [unique, not null]
  date DateTime [default: `now()`, not null]
  homeEmail String
  homeCel String
  homeDireccion String
  homeExtNum String
  homeIntNum String
  homeCity String
  homeState String
  homePostalCode String
  homeCountry String
  lugarOrigenEstado String
  lugarOrigenCiudad String
}

Table Otros {
  id String [pk]
  clinicos Clinicos [not null]
  clinicosId String [unique, not null]
  date DateTime [default: `now()`, not null]
  nombreOtros String
  apellidoPaterno String
  apellidoMaterno String
  estadoCivil String
  nivelEstudios String
}

Table Ocupacion {
  id String [pk]
  clinicos Clinicos [not null]
  clinicosId String [unique, not null]
  date DateTime [default: `now()`, not null]
  ocupacion String
  paisTrabajo String
  direccionTrabajo String
  ciudadTrabajo String
  estadoTrabajo String
}

Table Profile {
  id String [pk]
  nombre String [not null]
  apellidoPaterno String [not null]
  apellidoMaterno String
  cedulaProfesional String [unique, not null]
  institution String [not null]
  correoElectronico String [unique, not null]
  password String [not null]
  dateAdded DateTime [default: `now()`, not null]
  locations String[] [not null]
}

Table Bacteria {
  id String [pk]
  bacteria String [unique, not null]
  nombreNormalizado String [unique, not null]
  descripcion String [not null, default: '']
  table Int [not null]
  susceptibilidades AntimicrobianoSusceptibilidad [not null]
}

Table Resistance {
  id String [pk]
  resistanceMechanism String [unique, not null]
}

Table Gene {
  id String [pk]
  geneName String [unique, not null]
}

Table Antibiotic {
  id String [pk]
  antibioticName String [unique, not null]
}

Table Hospital {
  id String [pk]
  clues String [unique, not null]
  hospitalName String [not null]
  entidad String [not null]
  municipio String [not null]
  tipo String [not null]
  subtipo String [not null]
  codigo String [not null]
  status String [not null]
  clave String [not null]
  nivel String [not null]
  latitude Float
  longitude Float
}

Table State {
  id String [pk]
  stateName String [unique, not null]
}

Table Susceptibilidad {
  id String [pk]
  nombre String [unique, not null]
  color String [not null]
  susceptibilidades AntimicrobianoSusceptibilidad [not null]
}

Table Antimicrobiano {
  id String [pk]
  nombre String [unique, not null]
  tables Int[] [not null]
  descripcion String [not null, default: '']
  susceptibilidades AntimicrobianoSusceptibilidad [not null]
}

Table AntimicrobianoSusceptibilidad {
  id String [pk]
  bacteriaId String [not null]
  bacteria Bacteria [not null]
  antimicrobianoId String [not null]
  antimicrobiano Antimicrobiano [not null]
  susceptibilidadId String [not null]
  susceptibilidad Susceptibilidad [not null]

  indexes {
    (antimicrobianoId, bacteriaId) [unique]
  }
}

Table Indreobj {
  id String [pk]
  bacteria String [not null]
  resistanceMechanism String[] [not null]
  antibiotic String[] [not null]
  gene String[] [not null]
  geneVariant String [not null]
  hospitalName String [not null]
  hospitalClues String [not null]
  hospitalId String [not null]
  dynamicData Json [not null]
  dateAdded DateTime [default: `now()`, not null]
}

Table StateGeoJson {
  id String [pk]
  stateName String [unique, not null]
  geoJson Json [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: Visitation.clinicosId > Clinicos.id

Ref: Contacto.clinicosId - Clinicos.id

Ref: Otros.clinicosId - Clinicos.id

Ref: Ocupacion.clinicosId - Clinicos.id

Ref: AntimicrobianoSusceptibilidad.bacteriaId > Bacteria.id

Ref: AntimicrobianoSusceptibilidad.antimicrobianoId > Antimicrobiano.id

Ref: AntimicrobianoSusceptibilidad.susceptibilidadId > Susceptibilidad.id